#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============

Tag: V00-03-79
2016-06-25 Mikhail S. Dubrovin
- AreaDetector.py - det.image returns 2-d arrays w/o geometry
- add examples/ex_opal.py
	
Tag: V00-03-78
2016-06-24 Mikhail S. Dubrovin
- add examples/ex_epix100_cmod.py update ex_cspad_gain_mask.py

Tag: V00-03-77
2016-06-24 Mikhail S. Dubrovin
- Add gain factor and gain_mask in det.calib method (PSAS-139)
M       src/AreaDetector.py
M       src/PyDetectorAccess.py

Tag: V00-03-76
2016-06-21 Mikhail S. Dubrovin
- Add three new parameters to the command line algorithm of Detector.app.det_ndarr_raw_proc (PSAS-6)

Tag: V00-03-75
2016-06-16 Mikhail S. Dubrovin
- PyDetectorAccess.load_txtnda - reshape to det.shape() if possible (PSAS-139)
- add ex_cspad_z_position.py

Tag: V00-03-74
2016-06-15 Christopher O'Grady
- Add Detector support for two new MFX Pims that read out with the
  BldDataSpectrometer data type.

Tag: V00-03-73
2016-06-14 Mikhail S. Dubrovin
- AreaDetector.common_mode_correction - do not modify input nda.

Tag: V00-03-72
2016-06-14 Mikhail S. Dubrovin
- AreaDetector.py and PyDetectorAccess.py - change all mask dtype to uint8 (PSAS-139)
- fix typo in app/det_ndarr_average

Tag: V00-03-71
2016-06-10 Christopher O'Grady
- Add DdlDetector types for XCS-BEAMMON-01 and EOrbits BLD.

Tag: V00-03-70
2016-06-10 Christopher O'Grady
- Add new TDCDetector for acqiris TDC

Tag: V00-03-69
2016-06-09 Mikhail S. Dubrovin
- PyDetectorAccess - hide print statements under control of pbits

Tag: V00-03-68
2016-05-20 Mikhail S. Dubrovin
- Code refactoring:
	- move GlobalUtils.table_from_cspad_ndarr method to pyimgalgos